# openhwp

./: CLAUDE.md  Cargo.toml  README.md
crates/hwp/: Cargo.toml  README.md
crates/hwp/src/: doc_options.rs  document.rs  error.rs  lib.rs  preview.rs  script.rs  summary.rs
crates/hwp/src/body/: chart.rs  container.rs  control.rs  control_data.rs  equation.rs  field.rs  footnote.rs  form_object.rs  header_footer.rs  hyperlink.rs  list_header.rs  memo.rs  mod.rs  page.rs  paragraph.rs  picture.rs  section.rs  section_definition.rs  shape.rs  table.rs  text_art.rs  text_box.rs  video.rs
crates/hwp/src/convert/: color.rs  font_helper.rs  from_ir.rs  mod.rs  to_ir.rs
crates/hwp/src/crypto/: distribution.rs  mod.rs  password.rs
crates/hwp/src/doc_info/: binary_data.rs  border_fill.rs  bullet.rs  char_shape_props.rs  character_shape.rs  compatible_document.rs  distribute_doc_data.rs  document_data.rs  document_properties.rs  face_name.rs  forbidden_char.rs  id_mappings.rs  layout_compatibility.rs  mod.rs  numbering.rs  paragraph_shape.rs  style.rs  tab_definition.rs  track_change.rs
crates/hwp/src/header/: file_header.rs  mod.rs  properties.rs
crates/hwp/src/primitive/: color.rs  mod.rs  record.rs  spacing.rs  unit.rs  version.rs
crates/hwp/src/util/: decompress.rs  mod.rs  reader.rs
crates/hwp/src/writer/: body_writer.rs  byte_writer.rs  doc_info_writer.rs  file_header_writer.rs  mod.rs
crates/hwp/tests/: fixtures_test.rs
crates/hwpx/: Cargo.toml  LICENSE  README.md
crates/hwpx/src/: any_element.rs  arbitrary.rs  core.rs  document.rs  error.rs  history.rs  lib.rs  master_page.rs  version.rs  xs.rs
crates/hwpx/src/convert/: from_ir.rs  mod.rs  to_ir.rs
crates/hwpx/src/core/: attributes.rs  enums.rs  mod.rs  types.rs
crates/hwpx/src/header/: begin_number.rs  border_fill.rs  bullet.rs  character_shape.rs  compatible_document.rs  document_option.rs  font.rs  forbidden_word.rs  mapping_table.rs  memo_shape.rs  mod.rs  numbering.rs  paragraph_head.rs  paragraph_shape.rs  style.rs  tab_definition.rs  track_change.rs
crates/hwpx/src/namespace/: app.rs  head.rs  (+4 more)
crates/hwpx/tests/: compatible_document_tests.rs  control_tests.rs  core_enums_tests.rs  core_types_tests.rs  fixture_integration_tests.rs  font_tests.rs  header_tests.rs  paragraph_tests.rs  parse_fixtures.rs  section_tests.rs  shape_tests.rs  table_tests.rs  version_tests.rs
(+326 files in other folders)
