[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
cfb = "0.12.1"
insta = { version = "1.44.3", features = ["yaml"] }
miniz_oxide = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
quick-xml = { version = "0.38.4", features = ["serialize", "overlapped-lists"] }
