[package]
name = "hwpx"
version = "0.1.0"
edition = "2024"
authors = ["Danuel <me@danuel.io>"]
description = "A Rust library for parsing and generating HWPX (KS X 6101:2024) documents"
license = "MIT"
repository = "https://github.com/openhwp/openhwp"
homepage = "https://github.com/openhwp/openhwp"
readme = "README.md"
keywords = ["hwpx", "hangul", "document", "xml", "korean"]
categories = ["parsing", "encoding"]

[dependencies]
serde.workspace = true
quick-xml.workspace = true
ir = { path = "../ir" }
primitive = { workspace = true, features = ["serde"] }

[dev-dependencies]
insta.workspace = true
